--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -4,7 +4,7 @@
   <a href="index3.html" class="brand-link">
     <img src="/adminlte/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
       style="opacity: .8">
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">BWA-STOREGG</span>
   </a>
 
   <!-- Sidebar -->
@@ -13,7 +13,7 @@
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <li class="nav-item">
-          <a href="pages/calendar.html" class="nav-link">
+          <a href="/" class="nav-link">
             <i class="nav-icon fas fa-home"></i>
             <p>
               Beranda
@@ -24,7 +24,7 @@
         <li class="nav-header">MASTER</li>
 
         <li class="nav-item">
-          <a href="pages/calendar.html" class="nav-link">
+          <a href="/category" class="nav-link">
             <i class="nav-icon far fa-calendar-alt"></i>
             <p>
               Kategori
