--- a/views/admin/category/create.ejs
+++ b/views/admin/category/create.ejs
@@ -14,7 +14,8 @@
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active">Kategori</li>
+            <li class="breadcrumb-item"><a href="/category">Kategori</a></li>
+            <li class="breadcrumb-item active">Tambah</li>
           </ol>
         </div>
       </div>
@@ -26,20 +27,30 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">
-                <a href="/category/create" class="btn btn-primary">
-                  <i class="nav-icon far fa-plus-square"></i>
-                  Tambah
-                </a>
-              </h3>
+          <!-- /.card-header -->
+          <div class="card-body">
+            <!-- general form elements -->
+            <div class="card card-primary">
+              <div class="card-header">
+                <h3 class="card-title">Tambah Kategori</h3>
+              </div>
+              <!-- /.card-header -->
+              <!-- form start -->
+              <form action="/category/create" method="post">
+                <div class="card-body">
+                  <div class="form-group">
+                    <label for="name">Nama kategori :</label>
+                    <input type="text" name="name" class=" form-control" id="name"
+                      placeholder="Masukkan nama kategori..." required>
+                  </div>
+                </div>
+
+                <div class="card-footer">
+                  <button type="submit" class="btn btn-primary">Simpan</button>
+                </div>
+              </form>
             </div>
-            <!-- /.card-header -->
-            <div class="card-body">
-              <%- include ./table.ejs %>
-            </div>
-            <!-- /.card-body -->
+            <!-- /.card -->
           </div>
           <!-- /.card -->
         </div>
