--- a/views/partials/js.ejs
+++ b/views/partials/js.ejs
@@ -32,8 +32,9 @@
 <script src="/adminlte/dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="/adminlte/dist/js/pages/dashboard.js"></script>
+<!-- Select2 untuk form tambah di section nominal-->
+<script src="/adminlte/plugins/select2/js/select2.full.min.js"></script>
 
-<!-- Awal script untuk DataTables & Plugins -->
 <!-- DataTables  & Plugins -->
 <script src="/adminlte/plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="/adminlte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
@@ -65,9 +66,11 @@
       "autoWidth": false,
       "responsive": true,
     });
+
+    //Initialize Select2 Elements
+    $('.select2').select2()
   });
 </script>
-<!-- Akhir script untuk DataTables & Plugins -->
 </body>
 
 </html>
