mengelola section admin/voucher dengan menambahkan proses create (CRUD)

--- a/views/admin/nominal/edit.ejs
+++ b/views/admin/nominal/edit.ejs
@@ -47,7 +47,7 @@
                       </option>
                       <option value="Diamond" <% if (nominal.coinName === "Diamond") { %> selected <% } %>>Diamond
                       </option>
-                      <option value="jewel" <% if (nominal.coinName === "Jewel") { %> selected <% } %>>Jewel</option>
+                      <option value="Jewel" <% if (nominal.coinName === "Jewel") { %> selected <% } %>>Jewel</option>
                     </select>
                   </div>
                   <div class="form-group">
