--- a/views/admin/nominal/create.ejs
+++ b/views/admin/nominal/create.ejs
@@ -45,7 +45,7 @@
                       <option selected="selected">Pilih koin</option>
                       <option value="Gold">Gold</option>
                       <option value="Diamond">Diamond</option>
-                      <option value="jewel">Jewel</option>
+                      <option value="Jewel">Jewel</option>
                     </select>
                   </div>
                   <div class="form-group">
