mengelola section admin/voucher dengan menambahkan proses read (CRUD) dan menambahkan photo ke table

--- a/views/admin/voucher/create.ejs
+++ b/views/admin/voucher/create.ejs
@@ -66,7 +66,7 @@
                   </div>
                   <div class="form-group">
                     <label for="image">Gambar :</label>
-                    <input type="file" name="image" class="form-control" id="image" placeholder="Masukkan gambar.." required>
+                    <input type="file" name="image" class="form-control" id="image" placeholder="Masukkan gambar..">
                     <br>
                     <img src="" id="preview">
                   </div>
