--- a/views/admin/category/table.ejs
+++ b/views/admin/category/table.ejs
@@ -13,11 +13,11 @@
       <td><%= category.name %></td>
       <td>
         <form action="/category/delete/<%= category._id %>?_method=DELETE" method="post">
-          <a href="/category/edit/<%= category._id %>" class="btn btn-warning">
+          <a href="/category/edit/<%= category._id %>" class="btn btn-warning btn-sm">
             <i class="fas fa-pencil-alt"></i>
             Ubah
           </a>
-          <button class="btn btn-danger">
+          <button class="btn btn-danger btn-sm">
             <i class="fas fa-trash-alt"></i>
             Hapus
           </button>
