--- a/views/admin/nominal/table.ejs
+++ b/views/admin/nominal/table.ejs
@@ -17,11 +17,11 @@
       <td><%= e.price %></td>
       <td>
         <form action="/nominal/delete/<%= e._id %>?_method=DELETE" method="post">
-          <a href="/nominal/edit/<%= e._id %>" class="btn btn-warning">
+          <a href="/nominal/edit/<%= e._id %>" class="btn btn-warning btn-sm">
             <i class="fas fa-pencil-alt"></i>
             Ubah
           </a>
-          <button class="btn btn-danger">
+          <button class="btn btn-danger btn-sm">
             <i class="fas fa-trash-alt"></i>
             Hapus
           </button>
