--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -53,7 +53,7 @@
         <li class="nav-header">METODE PEMBAYARAN</li>
 
         <li class="nav-item">
-          <a href="pages/calendar.html" class="nav-link">
+          <a href="/bank" class="nav-link">
             <i class="nav-icon fas fa-money-check"></i>
             <p>
               Bank
