--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -1,7 +1,11 @@
 <% if (alert.message != "") { %>
 <div class="alert alert-<%= alert.status %> alert-dismissible">
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <h5><b><%= alert.status %></b></h5>
+  <% if (alert.status === 'success') { %>
+    <h5><b>Yes...!</b></h5>
+  <% } else { %>
+    <h5><b>Oops!</b></h5>
+  <% } %>
   <%= alert.message %>
 </div>
 <% } %>
