mengelola section transaksi dan fix code yang bermasalah

--- a/views/admin/bank/edit.ejs
+++ b/views/admin/bank/edit.ejs
@@ -44,14 +44,14 @@
                       placeholder="Masukkan nama pemilik..." value="<%= bank.name %>" required>
                   </div>
                   <div class="form-group">
-                    <label for="nameOfBank">Nama Bank :</label>
-                    <input type="text" name="nameOfBank" class=" form-control" id="nameOfBank"
-                      placeholder="Masukkan nama bank..." value="<%= bank.nameOfBank%>" required>
+                    <label for="bankName">Nama Bank :</label>
+                    <input type="text" name="bankName" class=" form-control" id="bankName"
+                      placeholder="Masukkan nama bank..." value="<%= bank.bankName%>" required>
                   </div>
                   <div class="form-group">
-                    <label for="noRek">Nomor Rekening :</label>
-                    <input type="number" name="noRek" class=" form-control" id="noRek"
-                      placeholder="Masukkan nomor rekening..." value="<%= bank.noRek %>" required>
+                    <label for="noRekening">Nomor Rekening :</label>
+                    <input type="number" name="noRekening" class=" form-control" id="noRekening"
+                      placeholder="Masukkan nomor rekening..." value="<%= bank.noRekening %>" required>
                   </div>
                 </div>
 
