--- a/views/admin/payment/edit.ejs
+++ b/views/admin/payment/edit.ejs
@@ -55,7 +55,7 @@
                             <% } %>
                           <% }) %>
                           >
-                          <%= e.name %>-<%= e.nameOfBank%>-<%= e.noRek %>
+                          <%= e.name %>-<%= e.bankName%>-<%= e.noRekenig %>
                         </option>
                         <% }) %>
                       </select>
