--- a/views/admin/payment/table.ejs
+++ b/views/admin/payment/table.ejs
@@ -16,7 +16,7 @@
       <td>
         <% e.banks.forEach(bank => { %>
           <span class="badge badge-info">
-            <%= bank.name %>-<%= bank.nameOfBank %>-<%= bank.noRek %>
+            <%= bank.name %>-<%= bank.bankName %>-<%= bank.noRekening %>
           </span>
         <% }) %>
       </td>
