--- a/views/admin/voucher/table.ejs
+++ b/views/admin/voucher/table.ejs
@@ -18,8 +18,8 @@
         <img 
           src="http://localhost:3000/uploads/<%= e.thumbnail %>" 
           alt="<%= e.name %> Photo"
-          width="25%"
-          height="25%">
+          width="48px"
+          height="58px">
       </td>
       <td><%= e.name %></td>
       <td><%= e?.category?.name ?? '-' %></td>
