--- a/views/admin/bank/create.ejs
+++ b/views/admin/bank/create.ejs
@@ -44,13 +44,13 @@
                       placeholder="Masukkan nama pemilik..." required>
                   </div>
                   <div class="form-group">
-                    <label for="nameOfBank">Nama Bank :</label>
-                    <input type="text" name="nameOfBank" class=" form-control" id="nameOfBank"
+                    <label for="bankName">Nama Bank :</label>
+                    <input type="text" name="bankName" class=" form-control" id="bankName"
                       placeholder="Masukkan nama bank..." required>
                   </div>
                   <div class="form-group">
-                    <label for="noRek">Nomor Rekening :</label>
-                    <input type="number" name="noRek" class=" form-control" id="noRek"
+                    <label for="noRekening">Nomor Rekening :</label>
+                    <input type="number" name="noRekening" class=" form-control" id="noRekening"
                       placeholder="Masukkan nomor rekening..." required>
                   </div>
                 </div>
