--- a/views/admin/payment/create.ejs
+++ b/views/admin/payment/create.ejs
@@ -48,7 +48,7 @@
                       <select class="form-control select2" multiple="multiple" style="width: 100%;" name="banks"
                         data-placeholder="Pilih Bank" required>
                         <% bank.forEach(e => { %>
-                        <option value="<%= e._id %>"><%= e.name %>-<%= e.nameOfBank%>-<%= e.noRek %>
+                        <option value="<%= e._id %>"><%= e.name %>-<%= e.bankName%>-<%= e.noRekening %>
                         </option>
                         <% }) %>
                       </select>
