--- a/views/admin/transaction/table.ejs
+++ b/views/admin/transaction/table.ejs
@@ -54,16 +54,30 @@
 
       <td>
         <form action="/transaction/status/<%= e._id %>?status=failed&_method=PUT" method="post" class="d-inline-block">
-          <button class="btn btn-danger btn-sm">
-            <i class="fas fa-times-circle"></i>
-            Tolak
-          </button>
+          <% if (e.status !== 'pending') { %>
+            <button class="btn btn-danger btn-sm disabled">
+              <i class="fas fa-times-circle"></i>
+              Tolak
+            </button>
+            <% } else { %>
+              <button class="btn btn-danger btn-sm">
+                <i class="fas fa-times-circle"></i>
+                Tolak
+              </button>
+          <% } %>
         </form>
         <form action="/transaction/status/<%= e._id %>?status=success&_method=PUT" method="post" class="d-inline-block">
-          <button class="btn btn-info btn-sm">
-            <i class="fas fa-check"></i>
-            Terima
-          </button>
+          <% if (e.status !== 'pending') { %>
+            <button class="btn btn-primary btn-sm disabled">
+              <i class="fas fa-check"></i>
+              Terima
+            </button>
+            <% } else { %>
+            <button class="btn btn-primary btn-sm">
+              <i class="fas fa-check"></i>
+              Terima
+            </button>
+          <% } %>
         </form>
       </td>
     </tr>
