--- a/views/admin/voucher/edit.ejs
+++ b/views/admin/voucher/edit.ejs
@@ -81,7 +81,7 @@
                     <label for="image">Gambar :</label>
                     <input type="file" name="image" class="form-control" id="image" placeholder="Masukkan gambar..">
                     <br>
-                    <img src="http://localhost:3000/uploads/<%= voucher.thumbnail %>" id="preview">
+                    <img src="https://tokogames.herokuapp.com/uploads/<%= voucher.thumbnail %>" id="preview">
                   </div>
                 </div>
 
