--- a/views/admin/voucher/table.ejs
+++ b/views/admin/voucher/table.ejs
@@ -16,7 +16,7 @@
       <td><%= i %></td>
       <td>
         <img 
-          src="http://localhost:3000/uploads/<%= e.thumbnail %>" 
+          src="https://tokogames.herokuapp.com/uploads/<%= e.thumbnail %>" 
           alt="<%= e.name %> Photo"
           width="48px"
           height="58px">
