--- a/views/admin/transaction/table.ejs
+++ b/views/admin/transaction/table.ejs
@@ -18,7 +18,7 @@
         <ul class="list-inline">
           <li class="list-inline-item">
             <img 
-              src="http://localhost:3000/uploads/<%= e?.historyVoucherTopup?.thumbnail %>" 
+              src="https://tokogames.herokuapp.com/uploads/<%= e?.historyVoucherTopup?.thumbnail %>" 
               alt="<%= e?.historyVoucherTopup?.gameName %>"
               width="48px"
               height="58px"
